--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>INIAD オープンキャンパス特設サイト(偽)</title>
+    <title>INIAD オープンキャンパス特設サイト</title>
     <link rel="stylesheet" type="text/css" href="css/iniad.css">
   </head>
 
